checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000281550.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#42: 
>> In file included from /local/linsrc/next-20080509/include/linux/kobject.h:21,

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#48: 
>> /local/linsrc/next-20080509/arch/x86/kernel/asm-offsets.c:4:

WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#51: 
>> /local/linsrc/next-20080509/include/linux/sysfs.h:142: error: implicit

WARNING:TYPO_SPELLING: 'depency' may be misspelled - perhaps 'dependency'?
#71: 
I guess this kind of patch is not acceptable to fix the depency?
                                                        ^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

WARNING:LEADING_SPACE: please, no spaces at the start of a line
#86: FILE: lib/kobject.c:422:
+       error = kobject_set_name(kobj, "%s", new_name);$

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000281550.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 5 warnings, 0 checks, 12 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000281550.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
